docs: update documentation for Maestro workflow integration
- Add FORK_MAINTENANCE.md with conflict resolution guide
- Update AGENTS.md with Maestro skills and workflow-engine info
- Update src/features/AGENTS.md with builtin-skills and workflow-engine structure
- Add src/features/workflow-engine/AGENTS.md knowledge base
- Update conductor/product.md with fork-specific context
- Add Maestro-related keywords to package.json

--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "librarian",
     "agents",
     "ai",
-    "llm"
+    "llm",
+    "maestro",
+    "workflow",
+    "tdd",
+    "design-phases",
+    "multi-agent"
   ],
   "author": "YeonGyu-Kim",
   "license": "SUL-1.0",
