--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,7 +61,6 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [test, typecheck]
-    if: github.repository == 'code-yeongyu/oh-my-opencode'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -79,6 +78,9 @@ jobs:
 
       - name: Upgrade npm for OIDC trusted publishing
         run: npm install -g npm@latest
+
+      - name: Configure npm auth
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Configure npm registry
         run: npm config set registry https://registry.npmjs.org
@@ -134,12 +136,3 @@ jobs:
         run: gh release delete next --yes 2>/dev/null || echo "No draft release to delete"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Merge to master
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          VERSION=$(jq -r '.version' package.json)
-          git checkout master
-          git reset --hard "v${VERSION}"
-          git push -f origin master
